Changed Path.of to Paths.get
JVM < 10 doesn't have .of